<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_akunkuTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:layout_marginEnd="10dp"
        android:text="@string/masuk_ke_akunku"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sapaanTv"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/isi_email_dan_katasandi_anda_untuk_masuk_akun"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_akunkuTv" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_loginEt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_outline_textinput"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sapaanTv"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_loginEt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/icon_outline_textinput"
        android:layout_marginTop="10dp"
        android:hint="@string/katasandi"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:focusable="true"
        app:hintTextAppearance="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_loginEt"
        app:layout_constraintVertical_bias="0.0"
        app:boxStrokeErrorColor="@color/purple_200"
        app:boxStrokeColor="@color/yellow"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btnTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingHorizontal="90dp"
        android:background="@drawable/login_buttonbg"
        android:text="@string/masuk_akun"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_loginEt" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/daftar_disiniTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/belum_punya_akun_buat_disini"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btnTv" />

</androidx.constraintlayout.widget.ConstraintLayout>

