<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_card_reg">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mari_buat_akunkuTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingHorizontal="1dp"
        android:text="@string/mari_buat_akunku"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sapaan1Tv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/isi_datamu_diformulir_buat_akun"
        android:textSize="20sp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mari_buat_akunkuTv" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fullname_registerEt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/icon_outline_textinput"
        android:hint="@string/nama_lengkap"
        android:textColorHint="@color/green"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:maxLength="23"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sapaan1Tv"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_registerEt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_outline_textinput"
        android:hint="@string/email"
        android:textColorHint="@color/green"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:maxLength="23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname_registerEt" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_registerEt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_outline_textinput"
        android:hint="@string/katasandi"
        android:textColorHint="@color/green"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_registerEt"
        app:layout_constraintVertical_bias="0.002" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reconfirm_password_registerEt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/icon_outline_textinput"
        android:hint="@string/konfirm_ulang_katasandi"
        android:textColorHint="@color/green"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_registerEt" />

    <ImageButton
        android:id="@+id/create_accountTv"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingHorizontal="100dp"
        android:background="@drawable/button_buat_akun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reconfirm_password_registerEt" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_disiniTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sudah_punya_akun_masuk_disini"
        android:textSize="20sp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_accountTv" />

</androidx.constraintlayout.widget.ConstraintLayout>