<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detailprofile">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_btnIb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_backbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btnIb"
        app:layout_constraintVertical_bias="0.222" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_cardprofil"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2"
        tools:layout_editor_absoluteX="25dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lokasitokoTv"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/lokasi_toko"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fullnameProfilTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/nama_lengkap"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lokasitokoTv" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:layout_marginStart="83dp"
            android:background="@drawable/icon_user"
            app:layout_constraintStart_toEndOf="@+id/fullnameProfilTv"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fullnameProfilEt"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullnameProfilTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailProfilTv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullnameProfilEt" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iconEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1.6dp"
            android:layout_marginStart="182dp"
            android:background="@drawable/icon_email"
            app:layout_constraintStart_toEndOf="@+id/emailProfilTv"
            app:layout_constraintTop_toBottomOf="@id/fullnameProfilEt" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailProfilEt"
            android:layout_width="280dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailProfilTv" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/keluarTv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:background="@drawable/keluar_account_button"
            android:text="@string/keluar_akun"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailProfilEt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>